Finish TOP P2 timeline

--- a/enums/common.yaml
+++ b/enums/common.yaml
@@ -59,6 +59,10 @@ actions:
   ten-chi-jin: 7403
   meditate: 7497
   soulsow: 24387
+  shadowbringer: 25757
+  phlegma: 24313
+  bladedance: 201
+  sagittarius-arrow: 4244
 
 status:
   # Utility
